--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
                    <h1>Welcome</h1>  
                 </div>
                 <div id="mid">
-                    <img src="/img/Untitled-removebg-preview.png" alt="coding">
+                    <img src="img/Untitled-removebg-preview.png" alt="coding">
                 </div>
                 <div id="bottom">
                     
-                    <a href="#IoT"><img src="/img/IoT.png" height="80px"></a>
-                    <a href="#Pic"><img src="/img/Photography-removebg-preview.png" height="80px"></a>
-                    <a href="#web"><img src="/img/WEB.png" height="80px"></a>
+                    <a href="#IoT"><img src="img/IoT.png" height="80px"></a>
+                    <a href="#Pic"><img src="img/Photography-removebg-preview.png" height="80px"></a>
+                    <a href="#web"><img src="img/WEB.png" height="80px"></a>
                     <h4>For more information scroll down</h4>
-                    <a href="#info"><img src="/img/Untitled2-removebg-preview.png" alt="down arrow" id="B"></a>
+                    <a href="#info"><img src="img/Untitled2-removebg-preview.png" alt="down arrow" id="B"></a>
                 </div>
             </div>
             <a name="info"><div class="info"></a>
                 <div id="img">
-                    <img src="/img/IMG_20220329_140638.jpg" height="300px" width="300px">
+                    <img src="img/IMG_20220329_140638.jpg" height="300px" width="300px">
                 </div>
                 <div id="pi">
                     <h1>Abdullah S. Shaikh</h1>
@@ -39,19 +39,19 @@
                    </h4>
                    <hr>
                    <div id="work">
-                    <H6><a name="IoT"></a><img src="/img/IoT.png"></a>IoT Programing</H6>
+                    <H6><a name="IoT"></a><img src="img/IoT.png"></a>IoT Programing</H6>
                     <p>
                         At first it was just an intrest. After studying it for a brief
                         period of time if found it quite intresting. 
                     </p>
                     <br>
-                    <h6><a name="Pic"><img src="/img/Photography-removebg-preview.png"></a> Photography</h6>
+                    <h6><a name="Pic"><img src="img/Photography-removebg-preview.png"></a> Photography</h6>
                     <p>
                        Also I have devoluped hobby of Photography in past few years.
                        I post some of the pictures
                        that I click  once in a while on my instagram.
                     </p>
-                    <h6><a name="web"></a><img src="/img/WEB.png">WEB Development</h6>
+                    <h6><a name="web"></a><img src="img/WEB.png">WEB Development</h6>
                     <p>
                         I've been working on web development now for a quite some time now.
                         It all started when my we decided to work on a project. Soon the
