--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h1>Abdullah S. Shaikh</h1>
                     <h4>
                     <p>
-                        Student Of Computer Science specialized in Arttificial Inteligence And Machine Learning
+                        Student Of Computer Science specialized in Artificial Inteligence And Machine Learning
                     </p>
                    </h4>
                    <hr>
@@ -42,19 +42,19 @@
                     <H6><a name="IoT"></a><img src="img/IoT.png"></a>IoT Programing</H6>
                     <p>
                         At first it was just an intrest. After studying it for a brief
-                        period of time if found it quite intresting. 
+                        period of time I found it quite intresting. 
                     </p>
                     <br>
                     <h6><a name="Pic"><img src="img/Photography-removebg-preview.png"></a> Photography</h6>
                     <p>
-                       Also I have devoluped hobby of Photography in past few years.
+                       Also I have devoloped hobby of Photography in past few years.
                        I post some of the pictures
                        that I click  once in a while on my instagram.
                     </p>
                     <h6><a name="web"></a><img src="img/WEB.png">WEB Development</h6>
                     <p>
-                        I've been working on web development now for a quite some time now.
-                        It all started when my we decided to work on a project. Soon the
+                        I've been working on web development now for quite some time now.
+                        It all started when we decided to work on a project. Soon the
                         project will be visible here. 
                     </p>
                     </div>
