--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h1>Abdullah S. Shaikh</h1>
                     <h4>
                     <p>
-                        Student Of Computer Science specialized in Artificial Inteligence And Machine Learning
+                        Student Of Computer Science specialized in Artificial Intelligence And Machine Learning
                     </p>
                    </h4>
                    <hr>
