--- a/index.html
+++ b/index.html
@@ -7,16 +7,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
     <title>Abdullah Shaikh</title>
 </head>
 
 <body>
-    <header>
-       
-    </header>
-    <footer>
+    <header id="top">
+        <div class="container-fluid">
+            <img src="img/Untitled-removebg-preview.png" alt="">
+            <br>
 
+            <br>
+            <h3>Welcome I am</h3>
+            <div class="tracking-in-contract">
+                <h1>Abdullah Shaikh</h1>
+            </div>
+            <div class="down">
+                <a href="#main_content" onclick="ewTab()">
+                    <i class="bi bi-arrow-down-circle"></i>
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <div id="main_content" class="container-fluid">
+
+        <img src="img/IMG_20220329_140638.jpg" alt="">
+        <br>
+
+        <div id="info" class="row">
+            <h2>My Skills</h2>
+            <br>
+            <br>
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <h3><a href="https://coursera.org/share/ba96bbbd591ed5505b9a28d3850bfe57"><i class="bi bi-globe"></i>
+                        Web Developer and Designer</a>
+                </h3>
+                <p>
+                    I'm a certified Web Developer handy with CSS, Bootstrap, JavaScript and AJAX.
+                    Open to work on Web Developement projects.
+                </p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <h3><a href="https://coursera.org/share/f034d2251060705e54570772eeefee8d"><i class="bi bi-wifi"></i>
+                        Beginner IoT Programer</a>
+                </h3>
+                <p>
+                    Certified IoT developer.
+                    Experience in working with Audrino Uno, ARTIK and Raspberry Pi 4.
+                    Also have good knowlegde of IoT.
+                </p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <h3><a href="Python.htm">
+                        Python Developer
+                    </a></h3>
+                <p>
+                    Studied Python as a part of syllabus, now learning
+                    Advance Python for Artificial Intelligence and Machine
+                    earning with Data Science.
+                </p>
+            </div>
+            <div id="AI" class="col-lg-3 col-md-12 col-sm-6">
+                <h3><a href="Ai.html"><i class="bi bi-robot"></i> AI & ML Specialist (Beginner)</a></h3>
+                <p> 
+                    Beginner to Artificial Intelligence and Mechine Learning. 
+                    Persuing my Bachelors in Engineering
+                    Specialized in AI and ML.
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+    <footer>
+        <div id="foot">
+            <h3>Socials</h3>
+            <div id="socials" class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <a href="">
+                        <i class="bi bi-linkedin"></i>
+                        <br>
+                        LinkedIn
+                    </a>
+                </div>
+                <br>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <a href="">
+                        <i class="bi bi-github"></i>
+                        <br>
+                        GitHub
+                    </a>
+                </div>
+                <br>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <a href="https://www.instagram.com/abdullah___.sk03/">
+                        <i class="bi bi-instagram"></i>
+                        <br>
+                        Instagram
+                    </a>
+                </div>
+                <br>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <a href="mailto:abdullah.sajid1974@gmail.com">
+                        <i class="bi bi-envelope"></i>
+                        <br>
+                        Email
+                    </a>
+                </div>
+                <br>
+                <div class="col-lg-12 col-md-6 col-sm-6">
+                    <a href="tel:+917506064383">
+                        <i class="bi bi-telephone-outbound"></i>
+                        <br>
+                        Contact
+                    </a>
+                </div>
+            </div>
+            <br>
+            <i class="bi bi-c-circle">Abdullah Shaikh</i>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
