change in plans

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1>Abdullah Shaikh</h1>
             </div>
             <div class="down">
-                <a href="#main_content" onclick="ewTab()">
+                <a href="#main_content">
                     <i class="bi bi-arrow-down-circle"></i>
                 </a>
             </div>
@@ -89,7 +89,7 @@
             <h3>Socials</h3>
             <div id="socials" class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <a href="">
+                    <a href="https://www.linkedin.com/in/abdullah-shaikh-8984b9204/" target="_blank">
                         <i class="bi bi-linkedin"></i>
                         <br>
                         LinkedIn
@@ -97,7 +97,7 @@
                 </div>
                 <br>
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <a href="">
+                    <a href="https://github.com/AbdullahSK03" target="_blank">
                         <i class="bi bi-github"></i>
                         <br>
                         GitHub
@@ -105,7 +105,7 @@
                 </div>
                 <br>
                 <div class="col-lg-3 col-md-4 col-sm-6">
-                    <a href="https://www.instagram.com/abdullah___.sk03/">
+                    <a href="https://www.instagram.com/abdullah___.sk03/" target="_blank">
                         <i class="bi bi-instagram"></i>
                         <br>
                         Instagram
@@ -113,7 +113,7 @@
                 </div>
                 <br>
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="mailto:abdullah.sajid1974@gmail.com">
+                    <a href="mailto:abdullah.sajid1974@gmail.com" target="_blank">
                         <i class="bi bi-envelope"></i>
                         <br>
                         Email
