--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p>
                     Studied Python as a part of syllabus, now learning
                     Advance Python for Artificial Intelligence and Machine
-                    earning with Data Science.
+                    learning with Data Science.
                 </p>
             </div>
             <div id="AI" class="col-lg-3 col-md-12 col-sm-6">
