--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caladea:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
     <title>Abdullah Shaikh</title>
 </head>
@@ -74,8 +77,8 @@
             </div>
             <div id="AI" class="col-lg-3 col-md-12 col-sm-6">
                 <h3><a href="Ai.html"><i class="bi bi-robot"></i> AI & ML Specialist (Beginner)</a></h3>
-                <p> 
-                    Beginner to Artificial Intelligence and Mechine Learning. 
+                <p>
+                    Beginner to Artificial Intelligence and Mechine Learning.
                     Persuing my Bachelors in Engineering
                     Specialized in AI and ML.
                 </p>
